RESOLVED FIXED20270
REGRESSION (r35244): Cannot take Acid 2 Test
https://bugs.webkit.org/show_bug.cgi?id=20270
Summary REGRESSION (r35244): Cannot take Acid 2 Test
BJ Homer
Reported 2008-08-03 20:03:32 PDT
Visiting http://acid2.acidtests.org/ directs the user to click a link in order to take the Acid2 test. The link directs the user to an anchor on the same page (#top), but nothing happens. Clicking the link in other browsers causes the page to display the famed smiley face.
Attachments
Matt Lilek
Comment 1 2008-08-03 20:10:38 PDT
Dupe of or related to bug 20038?
David Kilzer (:ddkilzer)
Comment 2 2008-08-04 12:51:21 PDT
In this case there is no form submission (unlike Bug 20038). Will investigate.
David Kilzer (:ddkilzer)
Comment 3 2008-08-05 03:51:11 PDT
The bisect-builds script reports: Works: r35231 Fails: r35249
David Kilzer (:ddkilzer)
Comment 4 2008-08-05 04:44:13 PDT
Running git-bisect shows that this regressed in r35244. http://trac.webkit.org/changeset/35244
David Kilzer (:ddkilzer)
Comment 5 2008-08-05 04:45:50 PDT
Maxime Britto
Comment 6 2008-08-08 17:16:18 PDT
fixed in r35648
David Kilzer (:ddkilzer)
Comment 7 2008-08-08 17:29:36 PDT
Note You need to log in before you can comment on or make changes to this bug.