WebCore/rendering/RenderObject.h
@@ -650,7 +650,7 @@ public:
     virtual void setScrollTop(int);
 
     virtual bool scroll(ScrollDirection, ScrollGranularity, float multiplier = 1.0f);
-    virtual bool canBeProgramaticallyScrolled() const;
+    virtual bool canBeProgramaticallyScrolled(bool) const;
     bool hasScrollableView() const;
     virtual void autoscroll();
     virtual void stopAutoscroll() { }
